Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,19 @@
 <h2>
 <a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributing</h2>
 
-<p>Please feel free to <a href="https://github.com/kjw0612/awesome-deep-vision/pulls">pull requests</a> or email Myungsub Choi (<a href="mailto:myungsub91@gmail.com">myungsub91@gmail.com</a>) to add links.</p>
+<p>Please feel free to <a href="https://github.com/kjw0612/awesome-deep-vision/pulls">pull requests</a>, email Myungsub Choi (<a href="mailto:myungsub91@gmail.com">myungsub91@gmail.com</a>) or join our chats to add links.</p>
+
+<p><a href="https://gitter.im/kjw0612/awesome-rnn?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://badges.gitter.im/Join%20Chat.svg" alt="Join the chat at https://gitter.im/kjw0612/awesome-rnn"></a></p>
+
+<h2>
+<a id="sharing" class="anchor" href="#sharing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Sharing</h2>
+
+<ul>
+<li><a href="http://twitter.com/home?status=http://jiwonkim.org/awesome-rnn%0AResources%20for%20Recurrent%20Neural%20Networks">Share on Twitter</a></li>
+<li><a href="http://www.facebook.com/sharer/sharer.php?u=https://jiwonkim.org/awesome-rnn">Share on Facebook</a></li>
+<li><a href="http://plus.google.com/share?url=https://jiwonkim.org/awesome-rnn">Share on Google Plus</a></li>
+<li><a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://jiwonkim.org/awesome-rnn&amp;title=Awesome%20Recurrent%20Neural&amp;Networks&amp;summary=&amp;source=">Share on LinkedIn</a></li>
+</ul>
 
 <h2>
 <a id="table-of-contents" class="anchor" href="#table-of-contents" aria-hidden="true"><span class="octicon octicon-link"></span></a>Table of Contents</h2>
@@ -55,6 +67,7 @@
 <li><a href="#video-captioning">Video Captioning</a></li>
 <li><a href="#question-answering">Question Answering</a></li>
 <li><a href="#turing-machines">Turing Machines</a></li>
+<li><a href="#robotics">Robotics</a></li>
 </ul>
 </li>
 <li><a href="#datasets">Datasets</a></li>
@@ -102,6 +115,8 @@
 <a href="https://github.com/karpathy/char-rnn">char-rnn</a> by Andrej Karpathy : multi-layer RNN/LSTM/GRU for training/sampling from character-level language models</li>
 <li>
 <a href="https://github.com/wojzaremba/lstm">LSTM</a> by Wojciech Zaremba : Long Short Term Memory Units to train a language model on word level Penn Tree Bank dataset</li>
+<li>
+<a href="https://github.com/oxford-cs-ml-2015">Oxford</a> by Nando de Freitas : Oxford Computer Science - Machine Learning 2015 Practicals</li>
 </ul>
 </li>
 <li>Etc.
@@ -219,6 +234,7 @@
 <li>Klaus Greff, Rupesh Kumar Srivastava, Jan Koutnik, Bas R. Steunebrink, Jurgen Schmidhuber, <a href="http://arxiv.org/pdf/1503.04069v1.pdf">LSTM: A Search Space Odyssey</a>, arXiv:1503.04069</li>
 <li>Zachary C. Lipton, <a href="http://arxiv.org/pdf/1506.00019v1.pdf">A Critical Review of Recurrent Neural Networks for Sequence Learning</a>, arXiv:1506.00019</li>
 <li>Andrej Karpathy, Justin Johnson, Li Fei-Fei, <a href="http://arxiv.org/pdf/1506.02078v1.pdf">Visualizing and Understanding Recurrent Networks</a>, arXiv:1506.02078</li>
+<li>Rafal Jozefowicz, <a href="http://jmlr.org/proceedings/papers/v37/jozefowicz15.pdf">Wojciech Zaremba, Ilya Sutskever, An Empirical Exploration of Recurrent Network Architectures</a>, ICML, 2015.</li>
 </ul>
 
 <h2>
@@ -391,6 +407,14 @@
 <li>Wojciech Zaremba, Ilya Sutskever, Reinforcement Learning Neural Turing Machines, arXiv:1505.00521. [<a href="http://arxiv.org/pdf/1505.00521v1">Paper</a>]</li>
 </ul>
 
+<h3>
+<a id="robotics" class="anchor" href="#robotics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Robotics</h3>
+
+<ul>
+<li>Marvin Zhang, Sergey Levine, Zoe McCarthy, Chelsea Finn, Pieter Abbeel, Policy Learning with Continuous Memory States for Partially Observed Robotic Control, arXiv:1507.01273. <a href="http://arxiv.org/pdf/1507.01273v1">[Paper]</a>
+</li>
+</ul>
+
 <h2>
 <a id="datasets" class="anchor" href="#datasets" aria-hidden="true"><span class="octicon octicon-link"></span></a>Datasets</h2>
 
@@ -423,7 +447,17 @@
 
     </section>
 
-  
+            <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-64569684-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
 
