Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 <li><a href="#image-captioning">Image Captioning</a></li>
 <li><a href="#video-captioning">Video Captioning</a></li>
 <li><a href="#question-answering">Question Answering</a></li>
+<li><a href="#image-generation">Image Generation</a></li>
 <li><a href="#turing-machines">Turing Machines</a></li>
 <li><a href="#robotics">Robotics</a></li>
 </ul>
@@ -336,6 +337,12 @@
 <li>Remi Lebret, Pedro O. Pinheiro, and Ronan Collobert, <em>Phrase-based Image Captioning</em>, arXiv:1502.03671 / ICML 2015</li>
 </ul>
 </li>
+<li>Baidu + UCLA [<a href="http://arxiv.org/pdf/1504.06692v1.pdf">Paper</a>]
+
+<ul>
+<li>Junhua Mao, Wei Xu, Yi Yang, Jiang Wang, Zhiheng Huang, and Alan L. Yuille, <em>Learning like a Child: Fast Novel Visual Concept Learning from Sentence Descriptions of Images</em>, arXiv:1504.06692</li>
+</ul>
+</li>
 </ul>
 
 <h3>
@@ -399,19 +406,28 @@
 </ul>
 
 <h3>
+<a id="image-generation" class="anchor" href="#image-generation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Image Generation</h3>
+
+<ul>
+<li>Karol Gregor, Ivo Danihelka, Alex Graves, Danilo J. Rezende, and Daan Wierstra, <em>DRAW: A Recurrent Neural Network for Image Generation,</em> ICML 2015 [<a href="http://arxiv.org/pdf/1502.04623v2.pdf">Paper</a>]</li>
+<li>Angeliki Lazaridou, Dat T. Nguyen, R. Bernardi, and M. Baroni, <em>Unveiling the Dreams of Word Embeddings: Towards Language-Driven Image Generation,</em> arXiv:1506.03500</li>
+<li>Lucas Theis and Matthias Bethge, <em>Generative Image Modeling Using Spatial LSTMs,</em> arXiv:1506.03478</li>
+</ul>
+
+<h3>
 <a id="turing-machines" class="anchor" href="#turing-machines" aria-hidden="true"><span class="octicon octicon-link"></span></a>Turing Machines</h3>
 
 <ul>
-<li> A.Graves, G. Wayne, and I. Danihelka., Neural Turing Machines, arXiv preprint arXiv:1410.5401, 2014 [<a href="http://arxiv.org/pdf/1410.5401v2.pdf">Paper</a>]</li>
-<li>Jason Weston, Sumit Chopra, Antoine Bordes, Memory Networks, arXiv:1410.3916. [<a href="http://arxiv.org/pdf/1410.3916v10">Paper</a>]</li>
-<li>Wojciech Zaremba, Ilya Sutskever, Reinforcement Learning Neural Turing Machines, arXiv:1505.00521. [<a href="http://arxiv.org/pdf/1505.00521v1">Paper</a>]</li>
+<li> A.Graves, G. Wayne, and I. Danihelka., <em>Neural Turing Machines,</em> arXiv preprint arXiv:1410.5401 [<a href="http://arxiv.org/pdf/1410.5401v2.pdf">Paper</a>]</li>
+<li>Jason Weston, Sumit Chopra, Antoine Bordes, <em>Memory Networks,</em> arXiv:1410.3916. [<a href="http://arxiv.org/pdf/1410.3916v10">Paper</a>]</li>
+<li>Wojciech Zaremba, Ilya Sutskever, <em>Reinforcement Learning Neural Turing Machines,</em> arXiv:1505.00521. [<a href="http://arxiv.org/pdf/1505.00521v1">Paper</a>]</li>
 </ul>
 
 <h3>
 <a id="robotics" class="anchor" href="#robotics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Robotics</h3>
 
 <ul>
-<li>Marvin Zhang, Sergey Levine, Zoe McCarthy, Chelsea Finn, Pieter Abbeel, Policy Learning with Continuous Memory States for Partially Observed Robotic Control, arXiv:1507.01273. <a href="http://arxiv.org/pdf/1507.01273v1">[Paper]</a>
+<li>Marvin Zhang, Sergey Levine, Zoe McCarthy, Chelsea Finn, Pieter Abbeel, <em>Policy Learning with Continuous Memory States for Partially Observed Robotic Control,</em> arXiv:1507.01273. <a href="http://arxiv.org/pdf/1507.01273v1">[Paper]</a>
 </li>
 </ul>
 
