Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
 <p>A curated list of resources dedicated to recurrent neural networks (closely related to <em>deep learning</em>).</p>
 
+<p>Maintainers - <a href="http://github.com/kjw0612">Jiwon Kim</a>, <a href="http://github.com/myungsub">Myungsub Choi</a></p>
+
+<p>We have pages for other topics: <a href="http://jiwonkim.org/awesome-deep-vision/">awesome-deep-vision</a>, <a href="http://jiwonkim.org/awesome-random-forest/">awesome-random-forest</a></p>
+
 <h2>
 <a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributing</h2>
 
@@ -452,8 +456,6 @@
 </ul>
 </li>
 </ul>
-
-<p>Maintainers - <a href="http://github.com/kjw0612">Jiwon Kim</a>, <a href="http://github.com/myungsub">Myungsub Choi</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/kjw0612/awesome-rnn">Awesome-rnn</a> is maintained by <a href="https://github.com/kjw0612">kjw0612</a>.</span>
