Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -230,6 +230,12 @@
 <li>Junyoung Chung, Caglar Gulcehre, Kyunghyun Cho, Yoshua Bengio, <em>Gated Feedback Recurrent Neural Networks</em>, arXiv:1502.02367 / ICML 2015</li>
 </ul>
 </li>
+<li>Grid LSTM [<a href="http://arxiv.org/pdf/1507.01526v1.pdf">Paper</a>]
+
+<ul>
+<li>Nal Kalchbrenner, Ivo Danihelka, and Alex Graves, <em>Grid Long Short-Term Memory</em>, arXiv:1507.01526</li>
+</ul>
+</li>
 </ul>
 
 <h3>
@@ -260,6 +266,7 @@
 <ul>
 <li>Geoffrey Hinton, Li Deng, Dong Yu, George E. Dahl, Abdel-rahman Mohamed, Navdeep Jaitly, Andrew Senior, Vincent Vanhoucke, Patrick Nguyen, Tara N. Sainath, and Brian Kingsbury, <em>Deep Neural Networks for Acoustic Modeling in Speech Recognition</em>, IEEE Signam Processing Magazine 2012 [<a href="http://cs224d.stanford.edu/papers/maas_paper.pdf">Paper</a>]</li>
 <li>Alex Graves, Abdel-rahman Mohamed, and Geoffrey Hinton, <em>Speech Recognition with Deep Recurrent Neural Networks</em>, arXiv:1303.5778 / ICASSP 2013 [<a href="http://www.cs.toronto.edu/%7Efritz/absps/RNN13.pdf">Paper</a>]</li>
+<li>Jan Chorowski, Dzmitry Bahdanau, Dmitriy Serdyuk, Kyunghyun Cho, and Yoshua Bengio, <em>Attention-Based Models for Speech Recognition</em>, arXiv:1506.07503 [<a href="http://arxiv.org/pdf/1506.07503v1.pdf">Paper</a>]</li>
 </ul>
 
 <h3>
@@ -423,8 +430,9 @@
 
 <ul>
 <li> A.Graves, G. Wayne, and I. Danihelka., <em>Neural Turing Machines,</em> arXiv preprint arXiv:1410.5401 [<a href="http://arxiv.org/pdf/1410.5401v2.pdf">Paper</a>]</li>
-<li>Jason Weston, Sumit Chopra, Antoine Bordes, <em>Memory Networks,</em> arXiv:1410.3916. [<a href="http://arxiv.org/pdf/1410.3916v10">Paper</a>]</li>
-<li>Wojciech Zaremba, Ilya Sutskever, <em>Reinforcement Learning Neural Turing Machines,</em> arXiv:1505.00521. [<a href="http://arxiv.org/pdf/1505.00521v1">Paper</a>]</li>
+<li>Jason Weston, Sumit Chopra, Antoine Bordes, <em>Memory Networks,</em> arXiv:1410.3916 [<a href="http://arxiv.org/pdf/1410.3916v10">Paper</a>]</li>
+<li>Sainbayar Sukhbaatar, Arthur Szlam, Jason Weston, and Rob Fergus, <em>End-To-End Memory Networks</em>, arXiv:1503.08895 [<a href="http://arxiv.org/pdf/1503.08895v4.pdf">Paper</a>]</li>
+<li>Wojciech Zaremba and Ilya Sutskever, <em>Reinforcement Learning Neural Turing Machines,</em> arXiv:1505.00521 [<a href="http://arxiv.org/pdf/1505.00521v1">Paper</a>]</li>
 </ul>
 
 <h3>
@@ -439,6 +447,19 @@
 <a id="datasets" class="anchor" href="#datasets" aria-hidden="true"><span class="octicon octicon-link"></span></a>Datasets</h2>
 
 <ul>
+<li>Speech Recognition
+
+<ul>
+<li>
+<a href="http://www.openslr.org/resources.php">OpenSLR</a> (Open Speech and Language Resources)
+
+<ul>
+<li><a href="http://www.openslr.org/12/">LibriSpeech ASR corpus</a></li>
+</ul>
+</li>
+<li><a href="http://voxforge.org/home">VoxForge</a></li>
+</ul>
+</li>
 <li>Image Captioning
 
 <ul>
