Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
 <a href="https://github.com/wojzaremba/lstm">LSTM</a> by Wojciech Zaremba : Long Short Term Memory Units to train a language model on word level Penn Tree Bank dataset</li>
 <li>
 <a href="https://github.com/oxford-cs-ml-2015">Oxford</a> by Nando de Freitas : Oxford Computer Science - Machine Learning 2015 Practicals</li>
+<li>
+<a href="https://github.com/Element-Research/rnn">rnn</a> by Nicholas Leonard : general library for implementing RNN, LSTM, BRNN and BLSTM (highly unit tested).</li>
 </ul>
 </li>
 <li>Etc.
