Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 <li><a href="#language-modeling">Language Modeling</a></li>
 <li><a href="#speech-recognition">Speech Recognition</a></li>
 <li><a href="#machine-translation">Machine Translation</a></li>
+<li><a href="#conversation-modeling">Conversation Modeling</a></li>
 <li><a href="#image-captioning">Image Captioning</a></li>
 <li><a href="#video-captioning">Video Captioning</a></li>
 <li><a href="#question-answering">Question Answering</a></li>
@@ -226,13 +227,13 @@
 <li>Kyunghyun Cho, Bart van Berrienboer, Caglar Gulcehre, Dzmitry Bahdanau, Fethi Bougares, Holger Schwenk, and Yoshua Bengio, <em>Learning Phrase Representations using RNN Encoder-Decoder for Statistical Machine Translation</em>, arXiv:1406.1078 / EMNLP 2014</li>
 </ul>
 </li>
-<li>GFRNN [<a href="http://arxiv.org/pdf/1502.02367v3.pdf">Paper-arXiv</a>] [<a href="http://jmlr.org/proceedings/papers/v37/chung15.pdf">Paper-ICML</a>] [<a href="http://jmlr.org/proceedings/papers/v37/chung15-supp.pdf">Supplementary</a>]
+<li>GFRNN [<a href="http://arxiv.org/abs/1502.02367">Paper-arXiv</a>] [<a href="http://jmlr.org/proceedings/papers/v37/chung15.pdf">Paper-ICML</a>] [<a href="http://jmlr.org/proceedings/papers/v37/chung15-supp.pdf">Supplementary</a>]
 
 <ul>
 <li>Junyoung Chung, Caglar Gulcehre, Kyunghyun Cho, Yoshua Bengio, <em>Gated Feedback Recurrent Neural Networks</em>, arXiv:1502.02367 / ICML 2015</li>
 </ul>
 </li>
-<li>Grid LSTM [<a href="http://arxiv.org/pdf/1507.01526v1.pdf">Paper</a>]
+<li>Grid LSTM [<a href="http://arxiv.org/abs/1507.01526">Paper</a>]
 
 <ul>
 <li>Nal Kalchbrenner, Ivo Danihelka, and Alex Graves, <em>Grid Long Short-Term Memory</em>, arXiv:1507.01526</li>
@@ -244,10 +245,10 @@
 <a id="surveys" class="anchor" href="#surveys" aria-hidden="true"><span class="octicon octicon-link"></span></a>Surveys</h3>
 
 <ul>
-<li>Klaus Greff, Rupesh Kumar Srivastava, Jan Koutnik, Bas R. Steunebrink, Jurgen Schmidhuber, <a href="http://arxiv.org/pdf/1503.04069v1.pdf">LSTM: A Search Space Odyssey</a>, arXiv:1503.04069</li>
-<li>Zachary C. Lipton, <a href="http://arxiv.org/pdf/1506.00019v1.pdf">A Critical Review of Recurrent Neural Networks for Sequence Learning</a>, arXiv:1506.00019</li>
-<li>Andrej Karpathy, Justin Johnson, Li Fei-Fei, <a href="http://arxiv.org/pdf/1506.02078v1.pdf">Visualizing and Understanding Recurrent Networks</a>, arXiv:1506.02078</li>
-<li>Rafal Jozefowicz, <a href="http://jmlr.org/proceedings/papers/v37/jozefowicz15.pdf">Wojciech Zaremba, Ilya Sutskever, An Empirical Exploration of Recurrent Network Architectures</a>, ICML, 2015.</li>
+<li>Klaus Greff, Rupesh Kumar Srivastava, Jan Koutnik, Bas R. Steunebrink, Jurgen Schmidhuber, <a href="http://arxiv.org/abs/1503.04069">LSTM: A Search Space Odyssey</a>, arXiv:1503.04069</li>
+<li>Zachary C. Lipton, <a href="http://arxiv.org/abs/1506.00019">A Critical Review of Recurrent Neural Networks for Sequence Learning</a>, arXiv:1506.00019</li>
+<li>Andrej Karpathy, Justin Johnson, Li Fei-Fei, <a href="http://arxiv.org/abs/1506.02078">Visualizing and Understanding Recurrent Networks</a>, arXiv:1506.02078</li>
+<li>Rafal Jozefowicz, Wojciech Zaremba, Ilya Sutskever, <a href="http://jmlr.org/proceedings/papers/v37/jozefowicz15.pdf">An Empirical Exploration of Recurrent Network Architectures</a>, ICML, 2015.</li>
 </ul>
 
 <h2>
@@ -268,14 +269,14 @@
 <ul>
 <li>Geoffrey Hinton, Li Deng, Dong Yu, George E. Dahl, Abdel-rahman Mohamed, Navdeep Jaitly, Andrew Senior, Vincent Vanhoucke, Patrick Nguyen, Tara N. Sainath, and Brian Kingsbury, <em>Deep Neural Networks for Acoustic Modeling in Speech Recognition</em>, IEEE Signam Processing Magazine 2012 [<a href="http://cs224d.stanford.edu/papers/maas_paper.pdf">Paper</a>]</li>
 <li>Alex Graves, Abdel-rahman Mohamed, and Geoffrey Hinton, <em>Speech Recognition with Deep Recurrent Neural Networks</em>, arXiv:1303.5778 / ICASSP 2013 [<a href="http://www.cs.toronto.edu/%7Efritz/absps/RNN13.pdf">Paper</a>]</li>
-<li>Jan Chorowski, Dzmitry Bahdanau, Dmitriy Serdyuk, Kyunghyun Cho, and Yoshua Bengio, <em>Attention-Based Models for Speech Recognition</em>, arXiv:1506.07503 [<a href="http://arxiv.org/pdf/1506.07503v1.pdf">Paper</a>]</li>
+<li>Jan Chorowski, Dzmitry Bahdanau, Dmitriy Serdyuk, Kyunghyun Cho, and Yoshua Bengio, <em>Attention-Based Models for Speech Recognition</em>, arXiv:1506.07503 [<a href="http://arxiv.org/abs/1506.07503">Paper</a>]</li>
 </ul>
 
 <h3>
 <a id="machine-translation" class="anchor" href="#machine-translation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Machine Translation</h3>
 
 <ul>
-<li>Univ. Montreal [<a href="http://arxiv.org/pdf/1406.1078v3.pdf">Paper</a>]
+<li>Univ. Montreal [<a href="http://arxiv.org/abs/1406.1078">Paper</a>]
 
 <ul>
 <li>Kyunghyun Cho, Bart van Berrienboer, Caglar Gulcehre, Dzmitry Bahdanau, Fethi Bougares, Holger Schwenk, and Yoshua Bengio, <em>Learning Phrase Representations using RNN Encoder-Decoder for Statistical Machine Translation</em>, arXiv:1406.1078 / EMNLP 2014</li>
@@ -287,7 +288,7 @@
 <li>Ilya Sutskever, Oriol Vinyals, and Quoc V. Le, <em>Sequence to Sequence Learning with Neural Networks</em>, arXiv:1409.3215 / NIPS 2014</li>
 </ul>
 </li>
-<li>Univ. Montreal [<a href="http://arxiv.org/pdf/1409.0473v6.pdf">Paper</a>]
+<li>Univ. Montreal [<a href="http://arxiv.org/abs/1409.0473">Paper</a>]
 
 <ul>
 <li>Dzmitry Bahdanau, KyungHyun Cho, and Yoshua Bengio, <em>Neural Machine Translation by Jointly Learning to Align and Translate</em>, arXiv:1409.0473 / ICLR 2015</li>
@@ -296,41 +297,50 @@
 </ul>
 
 <h3>
+<a id="conversation-modeling" class="anchor" href="#conversation-modeling" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conversation Modeling</h3>
+
+<ul>
+<li>Lifeng Shang, Zhengdong Lu, and Hang Li, <em>Neural Responding Machine for Short-Text Conversation</em>, arXiv:1503.02364 [<a href="http://arxiv.org/abs/1503.02364">Paper</a>]</li>
+<li>Oriol Vinyals and Quoc V. Le, <em>A Neural Conversational Model</em>, arXiv:1506.05869 [<a href="http://arxiv.org/abs/1506.05869">Paper</a>]</li>
+<li>Ryan Lowe, Nissan Pow, Iulian V. Serban, and Joelle Pineau, <em>The Ubuntu Dialogue Corpus: A Large Dataset for Research in Unstructured Multi-Turn Dialogue Systems</em>, arXiv:1506.08909 [<a href="http://arxiv.org/abs/1506.08909">Paper</a>]</li>
+</ul>
+
+<h3>
 <a id="image-captioning" class="anchor" href="#image-captioning" aria-hidden="true"><span class="octicon octicon-link"></span></a>Image Captioning</h3>
 
 <ul>
-<li>Baidu + UCLA [<a href="http://www.stat.ucla.edu/%7Ejunhua.mao/m-RNN.html">Web</a>] [<a href="http://arxiv.org/pdf/1410.1090v1.pdf">Paper-arxiv1</a>], [<a href="http://arxiv.org/pdf/1412.6632v4.pdf">Paper-ICLR</a>]
+<li>UCLA + Baidu [<a href="http://www.stat.ucla.edu/%7Ejunhua.mao/m-RNN.html">Web</a>] [<a href="http://arxiv.org/abs/1410.1090">Paper-arXiv1</a>], [<a href="http://arxiv.org/abs/1412.6632">Paper-arXiv2</a>]
 
 <ul>
 <li>Junhua Mao, Wei Xu, Yi Yang, Jiang Wang, and Alan L. Yuille, <em>Explain Images with Multimodal Recurrent Neural Networks</em>, arXiv:1410.1090</li>
 <li>Junhua Mao, Wei Xu, Yi Yang, Jiang Wang, Zhiheng Huang, and Alan L. Yuille, <em>Deep Captioning with Multimodal Recurrent Neural Networks (m-RNN)</em>, arXiv:1412.6632 / ICLR 2015</li>
 </ul>
 </li>
-<li>Univ. Toronto [<a href="http://arxiv.org/pdf/1411.2539v1.pdf">Paper</a>] [<a href="http://deeplearning.cs.toronto.edu/i2t">Web demo</a>]
+<li>Univ. Toronto [<a href="http://arxiv.org/abs/1411.2539">Paper</a>] [<a href="http://deeplearning.cs.toronto.edu/i2t">Web demo</a>]
 
 <ul>
 <li>Ryan Kiros, Ruslan Salakhutdinov, and Richard S. Zemel, <em>Unifying Visual-Semantic Embeddings with Multimodal Neural Language Models</em>, arXiv:1411.2539 / TACL 2015</li>
 </ul>
 </li>
-<li>Berkeley [<a href="http://jeffdonahue.com/lrcn/">Web</a>] [<a href="http://arxiv.org/pdf/1411.4389v3.pdf">Paper</a>]
+<li>Berkeley [<a href="http://jeffdonahue.com/lrcn/">Web</a>] [<a href="http://arxiv.org/abs/1411.4389">Paper</a>]
 
 <ul>
 <li>Jeff Donahue, Lisa Anne Hendricks, Sergio Guadarrama, Marcus Rohrbach, Subhashini Venugopalan, Kate Saenko, and Trevor Darrell, <em>Long-term Recurrent Convolutional Networks for Visual Recognition and Description</em>, arXiv:1411.4389 / CVPR 2015</li>
 </ul>
 </li>
-<li>Google [<a href="http://arxiv.org/pdf/1411.4555v2.pdf">Paper</a>]
+<li>Google [<a href="http://arxiv.org/abs/1411.4555">Paper</a>]
 
 <ul>
 <li>Oriol Vinyals, Alexander Toshev, Samy Bengio, and Dumitru Erhan, <em>Show and Tell: A Neural Image Caption Generator</em>, arXiv:1411.4555 / CVPR 2015</li>
 </ul>
 </li>
-<li>Microsoft [<a href="http://arxiv.org/pdf/1411.4952v3.pdf">Paper</a>]
+<li>Microsoft [<a href="http://arxiv.org/abs/1411.4952">Paper</a>]
 
 <ul>
 <li>Hao Fang, Saurabh Gupta, Forrest Iandola, Rupesh Srivastava, Li Deng, Piotr Dollar, Jianfeng Gao, Xiaodong He, Margaret Mitchell, John C. Platt, Lawrence Zitnick, and Geoffrey Zweig, <em>From Captions to Visual Concepts and Back</em>, arXiv:1411.4952 / CVPR 2015</li>
 </ul>
 </li>
-<li>Microsoft [<a href="http://arxiv.org/pdf/1411.5654v1.pdf">Paper-arxiv</a>], [<a href="http://www.cs.cmu.edu/%7Exinleic/papers/cvpr15_rnn.pdf">Paper-CVPR</a>]
+<li>Microsoft [<a href="http://arxiv.org/abs/1411.5654">Paper-arXiv</a>], [<a href="http://www.cs.cmu.edu/%7Exinleic/papers/cvpr15_rnn.pdf">Paper-CVPR</a>]
 
 <ul>
 <li>Xinlei Chen, and C. Lawrence Zitnick, <em>Learning a Recurrent Visual Representation for Image Caption Generation</em>
@@ -338,19 +348,19 @@
 <li>Xinlei Chen, and C. Lawrence Zitnick, <em>Mind’s Eye: A Recurrent Visual Representation for Image Caption Generation</em>, CVPR 2015</li>
 </ul>
 </li>
-<li>Univ. Toronto + Univ. Montreal [<a href="http://kelvinxu.github.io/projects/capgen.html">Web</a>] [<a href="http://www.cs.toronto.edu/%7Ezemel/documents/captionAttn.pdf">Paper</a>]
+<li>Univ. Montreal + Univ. Toronto [<a href="http://kelvinxu.github.io/projects/capgen.html">Web</a>] [<a href="http://www.cs.toronto.edu/%7Ezemel/documents/captionAttn.pdf">Paper</a>]
 
 <ul>
 <li>Kelvin Xu, Jimmy Lei Ba, Ryan Kiros, Kyunghyun Cho, Aaron Courville, Ruslan Salakhutdinov, Richard S. Zemel, and Yoshua Bengio, <em>Show, Attend, and Tell: Neural Image Caption Generation with Visual Attention</em>, arXiv:1502.03044 / ICML 2015</li>
 </ul>
 </li>
-<li>Idiap + EPFL + Facebook [<a href="http://arxiv.org/pdf/1502.03671v2.pdf">Paper</a>]
+<li>Idiap + EPFL + Facebook [<a href="http://arxiv.org/abs/1502.03671">Paper</a>]
 
 <ul>
 <li>Remi Lebret, Pedro O. Pinheiro, and Ronan Collobert, <em>Phrase-based Image Captioning</em>, arXiv:1502.03671 / ICML 2015</li>
 </ul>
 </li>
-<li>Baidu + UCLA [<a href="http://arxiv.org/pdf/1504.06692v1.pdf">Paper</a>]
+<li>UCLA + Baidu [<a href="http://arxiv.org/abs/1504.06692">Paper</a>]
 
 <ul>
 <li>Junhua Mao, Wei Xu, Yi Yang, Jiang Wang, Zhiheng Huang, and Alan L. Yuille, <em>Learning like a Child: Fast Novel Visual Concept Learning from Sentence Descriptions of Images</em>, arXiv:1504.06692</li>
@@ -362,25 +372,25 @@
 <a id="video-captioning" class="anchor" href="#video-captioning" aria-hidden="true"><span class="octicon octicon-link"></span></a>Video Captioning</h3>
 
 <ul>
-<li>Berkeley [<a href="http://jeffdonahue.com/lrcn/">Web</a>] [<a href="http://arxiv.org/pdf/1411.4389v3.pdf">Paper</a>]
+<li>Berkeley [<a href="http://jeffdonahue.com/lrcn/">Web</a>] [<a href="http://arxiv.org/abs/1411.4389">Paper</a>]
 
 <ul>
 <li>Jeff Donahue, Lisa Anne Hendricks, Sergio Guadarrama, Marcus Rohrbach, Subhashini Venugopalan, Kate Saenko, and Trevor Darrell, <em>Long-term Recurrent Convolutional Networks for Visual Recognition and Description</em>, arXiv:1411.4389 / CVPR 2015</li>
 </ul>
 </li>
-<li>UT Austin + UML + Berkeley [<a href="http://arxiv.org/pdf/1412.4729v3.pdf">Paper</a>]
+<li>UT Austin + UML + Berkeley [<a href="http://arxiv.org/abs/1412.4729">Paper</a>]
 
 <ul>
 <li>Subhashini Venugopalan, Huijuan Xu, Jeff Donahue, Marcus Rohrbach, Raymond Mooney, and Kate Saenko, <em>Translating Videos to Natural Language Using Deep Recurrent Neural Networks</em>, arXiv:1412.4729</li>
 </ul>
 </li>
-<li>Microsoft [<a href="http://arxiv.org/pdf/1505.01861v1.pdf">Paper</a>]
+<li>Microsoft [<a href="http://arxiv.org/abs/1505.01861">Paper</a>]
 
 <ul>
 <li>Yingwei Pan, Tao Mei, Ting Yao, Houqiang Li, and Yong Rui, <em>Joint Modeling Embedding and Translation to Bridge Video and Language</em>, arXiv:1505.01861</li>
 </ul>
 </li>
-<li>UT Austin + Berkeley + UML [<a href="http://arxiv.org/pdf/1505.00487v2.pdf">Paper</a>]
+<li>UT Austin + Berkeley + UML [<a href="http://arxiv.org/abs/1505.00487">Paper</a>]
 
 <ul>
 <li>Subhashini Venugopalan, Marcus Rohrbach, Jeff Donahue, Raymond Mooney, Trevor Darrell, and Kate Saenko, <em>Sequence to Sequence--Video to Text</em>, arXiv:1505.00487</li>
@@ -392,25 +402,25 @@
 <a id="question-answering" class="anchor" href="#question-answering" aria-hidden="true"><span class="octicon octicon-link"></span></a>Question Answering</h3>
 
 <ul>
-<li>MSR + Virginia Tech. [<a href="http://www.visualqa.org/">Web</a>] [<a href="http://arxiv.org/pdf/1505.00468v1.pdf">Paper</a>]
+<li>Virginia Tech. + MSR [<a href="http://www.visualqa.org/">Web</a>] [<a href="http://arxiv.org/abs/1505.00468">Paper</a>]
 
 <ul>
 <li>Stanislaw Antol, Aishwarya Agrawal, Jiasen Lu, Margaret Mitchell, Dhruv Batra, C. Lawrence Zitnick, and Devi Parikh, <em>VQA: Visual Question Answering</em>, arXiv:1505.00468 / CVPR 2015 SUNw:Scene Understanding workshop</li>
 </ul>
 </li>
-<li>MPI + Berkeley [<a href="https://www.mpi-inf.mpg.de/departments/computer-vision-and-multimodal-computing/research/vision-and-language/visual-turing-challenge/">Web</a>] [<a href="http://arxiv.org/pdf/1505.01121v2.pdf">Paper</a>]
+<li>MPI + Berkeley [<a href="https://www.mpi-inf.mpg.de/departments/computer-vision-and-multimodal-computing/research/vision-and-language/visual-turing-challenge/">Web</a>] [<a href="http://arxiv.org/abs/1505.01121">Paper</a>]
 
 <ul>
 <li>Mateusz Malinowski, Marcus Rohrbach, and Mario Fritz, <em>Ask Your Neurons: A Neural-based Approach to Answering Questions about Images</em>, arXiv:1505.01121</li>
 </ul>
 </li>
-<li>Univ. Toronto [<a href="http://arxiv.org/pdf/1505.02074v1.pdf">Paper</a>] [<a href="http://www.cs.toronto.edu/%7Emren/imageqa/data/cocoqa/">Dataset</a>]
+<li>Univ. Toronto [<a href="http://arxiv.org/abs/1505.02074">Paper</a>] [<a href="http://www.cs.toronto.edu/%7Emren/imageqa/data/cocoqa/">Dataset</a>]
 
 <ul>
-<li>Mengye Ren, Ryan Kiros, and Richard Zemel, <em>Image Question Answering: A Visual Semantic Embedding Model and a New Dataset</em>, arXiv:1505.02074 / ICML 2015 deep learning workshop</li>
+<li>Mengye Ren, Ryan Kiros, and Richard Zemel, <em>Exploring Models and Data for Image Question Answering</em>, arXiv:1505.02074 / ICML 2015 deep learning workshop</li>
 </ul>
 </li>
-<li>Baidu + UCLA [<a href="http://arxiv.org/pdf/1505.05612v1.pdf">Paper</a>] [<a href="">Dataset</a>]
+<li>Baidu + UCLA [<a href="http://arxiv.org/abs/1505.05612">Paper</a>] [<a href="">Dataset</a>]
 
 <ul>
 <li>Hauyuan Gao, Junhua Mao, Jie Zhou, Zhiheng Huang, Lei Wang, and Wei Xu, <em>Are You Talking to a Machine? Dataset and Methods for Multilingual Image Question Answering</em>, arXiv:1505.05612</li>
@@ -422,26 +432,26 @@
 <a id="image-generation" class="anchor" href="#image-generation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Image Generation</h3>
 
 <ul>
-<li>Karol Gregor, Ivo Danihelka, Alex Graves, Danilo J. Rezende, and Daan Wierstra, <em>DRAW: A Recurrent Neural Network for Image Generation,</em> ICML 2015 [<a href="http://arxiv.org/pdf/1502.04623v2.pdf">Paper</a>]</li>
-<li>Angeliki Lazaridou, Dat T. Nguyen, R. Bernardi, and M. Baroni, <em>Unveiling the Dreams of Word Embeddings: Towards Language-Driven Image Generation,</em> arXiv:1506.03500</li>
-<li>Lucas Theis and Matthias Bethge, <em>Generative Image Modeling Using Spatial LSTMs,</em> arXiv:1506.03478</li>
+<li>Karol Gregor, Ivo Danihelka, Alex Graves, Danilo J. Rezende, and Daan Wierstra, <em>DRAW: A Recurrent Neural Network for Image Generation,</em> ICML 2015 [<a href="http://arxiv.org/abs/1502.04623">Paper</a>]</li>
+<li>Angeliki Lazaridou, Dat T. Nguyen, R. Bernardi, and M. Baroni, <em>Unveiling the Dreams of Word Embeddings: Towards Language-Driven Image Generation,</em> arXiv:1506.03500 [<a href="http://arxiv.org/abs/1506.03500">Paper</a>]</li>
+<li>Lucas Theis and Matthias Bethge, <em>Generative Image Modeling Using Spatial LSTMs,</em> arXiv:1506.03478 [<a href="http://arxiv.org/abs/1506.03478">Paper</a>]</li>
 </ul>
 
 <h3>
 <a id="turing-machines" class="anchor" href="#turing-machines" aria-hidden="true"><span class="octicon octicon-link"></span></a>Turing Machines</h3>
 
 <ul>
-<li> A.Graves, G. Wayne, and I. Danihelka., <em>Neural Turing Machines,</em> arXiv preprint arXiv:1410.5401 [<a href="http://arxiv.org/pdf/1410.5401v2.pdf">Paper</a>]</li>
-<li>Jason Weston, Sumit Chopra, Antoine Bordes, <em>Memory Networks,</em> arXiv:1410.3916 [<a href="http://arxiv.org/pdf/1410.3916v10">Paper</a>]</li>
-<li>Sainbayar Sukhbaatar, Arthur Szlam, Jason Weston, and Rob Fergus, <em>End-To-End Memory Networks</em>, arXiv:1503.08895 [<a href="http://arxiv.org/pdf/1503.08895v4.pdf">Paper</a>]</li>
-<li>Wojciech Zaremba and Ilya Sutskever, <em>Reinforcement Learning Neural Turing Machines,</em> arXiv:1505.00521 [<a href="http://arxiv.org/pdf/1505.00521v1">Paper</a>]</li>
+<li> A.Graves, G. Wayne, and I. Danihelka., <em>Neural Turing Machines,</em> arXiv preprint arXiv:1410.5401 [<a href="http://arxiv.org/abs/1410.5401">Paper</a>]</li>
+<li>Jason Weston, Sumit Chopra, Antoine Bordes, <em>Memory Networks,</em> arXiv:1410.3916 [<a href="http://arxiv.org/abs/1410.3916">Paper</a>]</li>
+<li>Sainbayar Sukhbaatar, Arthur Szlam, Jason Weston, and Rob Fergus, <em>End-To-End Memory Networks</em>, arXiv:1503.08895 [<a href="http://arxiv.org/abs/1503.08895">Paper</a>]</li>
+<li>Wojciech Zaremba and Ilya Sutskever, <em>Reinforcement Learning Neural Turing Machines,</em> arXiv:1505.00521 [<a href="http://arxiv.org/abs/1505.00521">Paper</a>]</li>
 </ul>
 
 <h3>
 <a id="robotics" class="anchor" href="#robotics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Robotics</h3>
 
 <ul>
-<li>Marvin Zhang, Sergey Levine, Zoe McCarthy, Chelsea Finn, Pieter Abbeel, <em>Policy Learning with Continuous Memory States for Partially Observed Robotic Control,</em> arXiv:1507.01273. <a href="http://arxiv.org/pdf/1507.01273v1">[Paper]</a>
+<li>Marvin Zhang, Sergey Levine, Zoe McCarthy, Chelsea Finn, Pieter Abbeel, <em>Policy Learning with Continuous Memory States for Partially Observed Robotic Control,</em> arXiv:1507.01273. <a href="http://arxiv.org/abs/1507.01273">[Paper]</a>
 </li>
 </ul>
 
