--- a/index.html
+++ b/index.html
@@ -233,6 +233,12 @@
 <li>Junyoung Chung, Caglar Gulcehre, Kyunghyun Cho, Yoshua Bengio, <em>Gated Feedback Recurrent Neural Networks</em>, arXiv:1502.02367 / ICML 2015</li>
 </ul>
 </li>
+<li>Tree-Structured LSTM [<a href="http://arxiv.org/abs/1503.00075">Paper</a>]
+
+<ul>
+<li>Kai Sheng Tai, Richard Socher, and Christopher D. Manning, arXiv:1503.00075 / ACL 2015</li>
+</ul>
+</li>
 <li>Grid LSTM [<a href="http://arxiv.org/abs/1507.01526">Paper</a>]
 
 <ul>
@@ -261,6 +267,7 @@
 <li>Tomas Mikolov, Martin Karafiat, Lukas Burget, Jan "Honza" Cernocky, Sanjeev Khudanpur, <em>Recurrent Neural Network based Language Model</em>, Interspeech 2010 [<a href="http://www.fit.vutbr.cz/research/groups/speech/publi/2010/mikolov_interspeech2010_IS100722.pdf">Paper</a>]</li>
 <li>Tomas Mikolov, Stefan Kombrink, Lukas Burget, Jan "Honza" Cernocky, Sanjeev Khudanpur, <em>Extensions of Recurrent Neural Network Language Model</em>, ICASSP 2011 [<a href="http://www.fit.vutbr.cz/research/groups/speech/publi/2011/mikolov_icassp2011_5528.pdf">Paper</a>]</li>
 <li>Stefan Kombrink, Tomas Mikolov, Martin Karafiat, Lukas Burget, <em>Recurrent Neural Network based Language Modeling in Meeting Recognition</em>, Interspeech 2011 [<a href="http://www.fit.vutbr.cz/%7Eimikolov/rnnlm/ApplicationOfRNNinMeetingRecognition_IS2011.pdf">Paper</a>]</li>
+<li>Jiwei Li, Minh-Thang Luong, and Dan Jurafsky, <em>A Hierarchical Neural Autoencoder for Paragraphs and Documents</em>, ACL 2015 [<a href="http://arxiv.org/abs/1506.01057">Paper</a>], [<a href="https://github.com/jiweil/Hierarchical-Neural-Autoencoder">Code</a>]</li>
 </ul>
 
 <h3>
@@ -294,13 +301,19 @@
 <li>Dzmitry Bahdanau, KyungHyun Cho, and Yoshua Bengio, <em>Neural Machine Translation by Jointly Learning to Align and Translate</em>, arXiv:1409.0473 / ICLR 2015</li>
 </ul>
 </li>
+<li>Google + NYU [<a href="http://arxiv.org/abs/1410.8206">Paper</a>]
+
+<ul>
+<li>Minh-Thang Luong, Ilya Sutskever, Quoc V. Le, Oriol Vinyals, and Wojciech Zaremba, <em>Addressing the Rare Word Problem in Neural Machine Transltaion</em>, ACL 2015</li>
+</ul>
+</li>
 </ul>
 
 <h3>
 <a id="conversation-modeling" class="anchor" href="#conversation-modeling" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conversation Modeling</h3>
 
 <ul>
-<li>Lifeng Shang, Zhengdong Lu, and Hang Li, <em>Neural Responding Machine for Short-Text Conversation</em>, arXiv:1503.02364 [<a href="http://arxiv.org/abs/1503.02364">Paper</a>]</li>
+<li>Lifeng Shang, Zhengdong Lu, and Hang Li, <em>Neural Responding Machine for Short-Text Conversation</em>, arXiv:1503.02364 / ACL 2015 [<a href="http://arxiv.org/abs/1503.02364">Paper</a>]</li>
 <li>Oriol Vinyals and Quoc V. Le, <em>A Neural Conversational Model</em>, arXiv:1506.05869 [<a href="http://arxiv.org/abs/1506.05869">Paper</a>]</li>
 <li>Ryan Lowe, Nissan Pow, Iulian V. Serban, and Joelle Pineau, <em>The Ubuntu Dialogue Corpus: A Large Dataset for Research in Unstructured Multi-Turn Dialogue Systems</em>, arXiv:1506.08909 [<a href="http://arxiv.org/abs/1506.08909">Paper</a>]</li>
 </ul>
