Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
 <a href="https://github.com/gwtaylor/theano-rnn">theano-rnn</a> by Graham Taylor</li>
 <li>
 <a href="https://github.com/IndicoDataSolutions/Passage">Passage</a> : Library for text analysis with RNNs</li>
+<li>
+<a href="https://github.com/Ivaylo-Popov/Theano-Lights">Theano-Lights</a> : Contains many generative models</li>
 </ul>
 </li>
 <li>
@@ -140,6 +142,8 @@
 <ul>
 <li>
 <a href="http://chainer.org/">Chainer</a> : new, flexible deep learning library in Python</li>
+<li>
+<a href="http://joschu.github.io/">CGT</a>(Computational Graph Toolkit) : replicates Theano's API, but with very short compilation time and multithreading</li>
 <li>
 <a href="http://sourceforge.net/p/rnnl/wiki/Home/">RNNLIB</a> by Alex Graves : C++ based LSTM library</li>
 <li>
@@ -319,6 +323,12 @@
 <li>Jean Pouget-Abadie, Dzmitry Bahdanau, Bart van Merrienboer, Kyunghyun Cho, and Yoshua Bengio, <em>Overcoming the Curse of Sentence Length for Neural Machine Translation using Automatic Segmentation</em>, SSST-8 2014</li>
 <li>Dzmitry Bahdanau, KyungHyun Cho, and Yoshua Bengio, <em>Neural Machine Translation by Jointly Learning to Align and Translate</em>, arXiv:1409.0473 / ICLR 2015 [<a href="http://arxiv.org/pdf/1409.0473">Paper</a>]</li>
 <li>Sebastian Jean, Kyunghyun Cho, Roland Memisevic, and Yoshua Bengio, <em>On using very large target vocabulary for neural machine translation</em>, arXiv:1412.2007 / ACL 2015 [<a href="http://arxiv.org/pdf/1412.2007.pdf">Paper</a>]</li>
+</ul>
+</li>
+<li>Univ. Montreal + Middle East Tech. Univ. + Univ. Maine [<a href="http://arxiv.org/pdf/1503.03535.pdf">Paper</a>]
+
+<ul>
+<li>Caglar Gulcehre, Orhan Firat, Kelvin Xu, Kyunghyun Cho, Loic Barrault, Huei-Chi Lin, Fethi Bougares, Holger Schwenk, and Yoshua Bengio, <em>On Using Monolingual Corpora in Neural Machine Translation</em>, arXiv:1503.03535</li>
 </ul>
 </li>
 <li>Google [<a href="http://papers.nips.cc/paper/5346-sequence-to-sequence-learning-with-neural-networks.pdf">Paper</a>]
@@ -644,6 +654,7 @@ for Natural Language Processing</em>, arXiv:1506.07285</li>
 
 <ul>
 <li>Alex graves, hand-writing generation [<a href="http://www.cs.toronto.edu/%7Egraves/handwriting.html">link</a>]</li>
+<li>Ink Poster: Handwritten post-it notes [<a href="http://www.inkposter.com/?">link</a>]</li>
 </ul>
 
       <footer class="site-footer">
