Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
 
 <ul>
 <li>
+<a href="http://neon.nervanasys.com/docs/latest/index.html">Neon</a>: new deep learning library in Python, with support for RNN/LSTM, and a fast image captioning model</li>
+<li>
+<a href="https://github.com/IDSIA/brainstorm">Brainstorm</a>: deep learning library in Python, developed by IDSIA, thereby including various recurrent structures</li>
+<li>
 <a href="http://chainer.org/">Chainer</a> : new, flexible deep learning library in Python</li>
 <li>
 <a href="http://joschu.github.io/">CGT</a>(Computational Graph Toolkit) : replicates Theano's API, but with very short compilation time and multithreading</li>
@@ -258,10 +262,11 @@
 <li>Junyoung Chung, Caglar Gulcehre, Kyunghyun Cho, Yoshua Bengio, <em>Gated Feedback Recurrent Neural Networks</em>, arXiv:1502.02367 / ICML 2015</li>
 </ul>
 </li>
-<li>Tree-Structured LSTM [<a href="http://arxiv.org/pdf/1503.00075">Paper</a>]
+<li>Tree-Structured RNNs
 
 <ul>
-<li>Kai Sheng Tai, Richard Socher, and Christopher D. Manning, arXiv:1503.00075 / ACL 2015</li>
+<li>Kai Sheng Tai, Richard Socher, and Christopher D. Manning, <em>Improved Semantic Representations From Tree-Structured Long Short-Term Memory Networks</em>, arXiv:1503.00075 / ACL 2015 [<a href="http://arxiv.org/pdf/1503.00075">Paper</a>]</li>
+<li>Samuel R. Bowman, Christopher D. Manning, and Christopher Potts, <em>Tree-structured composition in neural networks without tree-structured architectures</em>, arXiv:1506.04834 [<a href="http://arxiv.org/pdf/1506.04834">Paper</a>]</li>
 </ul>
 </li>
 <li>Grid LSTM [<a href="http://arxiv.org/pdf/1507.01526">Paper</a>]
